# C_Plus_Plus

./: .gitignore
OpenCV/: image  image.cpp
STL_Algorithm/: a.out  find  find.cpp  sort.cpp
Utilities/: abort  abort.cpp  binary  read_write.cpp  swap  swap.cpp  variant  variant.cpp
compilation/: main  main.cpp  main.i  main.s
cpp-homeworks-master/: .clang-tidy  .gitignore
cpp-homeworks-master/homework_1/task_1/: commands.sh
cpp-homeworks-master/homework_1/task_2/: CMakeLists.txt  build.sh
cpp-homeworks-master/homework_2/task_1/: CMakeLists.txt
cpp-homeworks-master/homework_2/task_1/src/: main.cpp
cpp-homeworks-master/homework_2/task_2/: CMakeLists.txt
cpp-homeworks-master/homework_2/task_2/src/: main.cpp
cpp-homeworks-master/homework_3/: CMakeLists.txt
cpp-homeworks-master/homework_3/.cache/clangd/index/: homework_3.h.F72B55503F6756C6.idx  html_writer.cpp.640A69E94783F3BA.idx  html_writer.hpp.9615B60FE2D13AFD.idx  image_browser.cpp.AA58912DE4EB5F9B.idx  image_browser.hpp.ECD974FA1714C0D2.idx  test.cpp.223655835C9F1F37.idx
cpp-homeworks-master/homework_3/api/: homework_3.h  html_writer.hpp  image_browser.hpp
cpp-homeworks-master/homework_3/src/: html_writer.cpp  image_browser.cpp
cpp-homeworks-master/homework_4/: CMakeLists.txt
cpp-homeworks-master/homework_4/include/: homework_4.h  ipb_namedvector.hpp
cpp-homeworks-master/homework_5/: CMakeLists.txt
cpp-homeworks-master/homework_5/.cache/clangd/index/: convert_dataset.cpp.DAD6059995ABCAED.idx  convert_dataset.hpp.EC31C0045E91528B.idx  main.cpp.8DC9926760D789B5.idx  serialize.cpp.2798D7B3BBE2A2A7.idx  serialize.hpp.FF9F0EEDA02707D5.idx
cpp-homeworks-master/homework_5/src/: convert_dataset.cpp  main.cpp  serialize.cpp
cpp-homeworks-master/homework_6/: CMakeLists.txt
cpp-homeworks-master/homework_6/include/: Image.hpp  homework_6.h
cpp-homeworks-master/homework_6/io_tools/: io_tools.cpp  io_tools.hpp
cpp-homeworks-master/homework_6/src/: Image.cpp
cpp-homeworks-master/homework_7/: CMakeLists.txt
cpp-homeworks-master/homework_7/include/: BowDictionary.hpp  homework_7.h  kmeans.hpp
cpp-homeworks-master/homework_7/src/: BowDictionary.cpp  convert_dataset.cpp  kmeans.cpp  serialize.cpp
cpp-homeworks-master/homework_8/task_1/: CMakeLists.txt
cpp-homeworks-master/homework_8/task_1/src/: stack_limit.cpp
cpp-homeworks-master/homework_8/task_2/: CMakeLists.txt
cpp-homeworks-master/homework_8/task_2/include/: Image.hpp  homework_8.h  strategy.hpp
cpp-homeworks-master/homework_8/task_2/src/: Image.cpp  strategy.cpp
cpp-homeworks-master/homework_9/: CMakeLists.txt
cpp-homeworks-master/homework_9/include/: BowDictionary.hpp  histograms.hpp  homework_9.h  kmeans.hpp
cpp-homeworks-master/homework_9/src/: BowDictionary.cpp  histograms.cpp  kmeans.cpp  main.cpp
f_lib/: CMakeLists.txt  main.cpp  tools.cpp
homework2/: ex1  main.cpp  str
homework2/task1/: CMakeLists.txt
homework2/task1/src/: CMakeLists.txt  main.cpp
homework2/task_2/src/: main.cpp
homework2/tests/: test_task_1.sh
homework3/.cache/clangd/index/: html_writer.cpp.C6ED977FD2FB75F5.idx  html_writer.hpp.EC2FA99DDB945B88.idx  image_browser.cpp.CAD792FF7DF60E52.idx  image_browser.hpp.7E183D3929CFC8D7.idx  test.cpp.BDFE9E68F8F36947.idx
homework3/src/: html_writer.cpp  image_browser.cpp  test.cpp
homework3/web_app/: example.html
homework4/include/: homework_4.h  ipb_algorithm.hpp  ipb_namedvector.hpp
homework4/tests/: CMakeLists.txt  test_ipb_algorithm.cpp  test_named_vector.cpp
task_2/: CMakeLists.txt  build.sh
task_2/.cache/clangd/index/: ipb_arithmetic.hpp.2C79BD3E08B263A7.idx  main.cpp.0E8E97CB8B674501.idx  subtract.cpp.F0F7612A5AD1AD97.idx  subtract.hpp.AD206CF6BD8B1ECC.idx  sum.cpp.792197C2700AF72B.idx  sum.hpp.00ACBD1C3721A122.idx
test_setup/: a.out  main.cpp
