cmake_minimum_required(VERSION 3.1)
project(homework_8_2)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
find_package(PNG REQUIRED)
include_directories(include ${PNG_INCLUDE_DIRS})

add_library(iostartegy src/strategy.cpp)
target_link_libraries(iostartegy ${PNG_LIBRARY})
add_library(image src/Image.cpp)
target_link_libraries(image iostartegy ${PNG_LIBRARY})